feat(messages): add new messages group

--- a/src/resources/templates/4_step.html
+++ b/src/resources/templates/4_step.html
@@ -1,4 +1,4 @@
-Спасибо за подписку! Обязательно оставайся со мной! Я каждый день публикую смешные и образовательные посты. А еще регулярно <b>провожу розыгрыши</b>, не пропусти!
+Спасибо за подписку! Обязательно оставайся со мной! Я каждый день публикую мотивационные и образовательные посты. А еще регулярно <b>провожу розыгрыши</b>, не пропусти!
 
 Вот твой гайд по {{ guide_name }}: 📘
 
