feat(struct) add another one guide link and fix text

--- a/src/resources/templates/membership_subscription.html
+++ b/src/resources/templates/membership_subscription.html
@@ -21,3 +21,5 @@
 P.S. 5 - это число мудрости, роста и познания
 
 Это твой шаг к новой себе, к гармоничным отношениям и к жизни, полной любви и радости. Подписывайся и начни менять свою реальность уже сегодня! 🌸
+
+С подробностями оферты можно ознакомиться по команде <i>/offer</i>
