--- a/src/resources/templates/2_step.html
+++ b/src/resources/templates/2_step.html
@@ -1,3 +1,4 @@
-Что из этого тебя больше всего интересует? <b>Твое желание — мой приоритет!</b> 🤗
+Что из этого тебя больше всего интересует?
+<b>Твое желание — мой приоритет!</b> 🤗
 
 ✨ Выбери одну из тем:
