--- a/src/resources/templates/4_1_step.html
+++ b/src/resources/templates/4_1_step.html
@@ -8,4 +8,4 @@
 
 Этот материал поможет тебе сделать шаг навстречу своим целям! Если будут вопросы — не стесняйся, я здесь, чтобы помочь! 💫
 
-<i>для связи: @mary_bellis</i>
+<i>для связи: @mary_ezotema</i>
